--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0051)http://app.manbetx.org/?domain=m.tvdmedia.com&code= -->
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>ManBetx客户端2.0下载</title>
+    <title>ManBetx - 注册 </title>
 
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <!-- Link Swiper's CSS -->
