--- a/index.html
+++ b/index.html
@@ -440,12 +440,12 @@ var is_weixin = (function() {
 				var uaa = u.toLowerCase();
 
 		   if(uaa.match(/MicroMessenger/i) == 'micromessenger'){
-			 window.location = 'error.php?domain='+domain+"&code="+code;
+// 			 window.location = 'error.php?domain='+domain+"&code="+code;
 			}else if(u.indexOf('UCBrowser') > -1){
-			  window.location = 'error.php?domain='+domain+"&code="+code;
+// 			  window.location = 'error.php?domain='+domain+"&code="+code;
 			}
 			else if(u.indexOf("MQQBrowser")>-1){
-			window.location = 'error.php?domain='+domain+"&code="+code;
+// 			window.location = 'error.php?domain='+domain+"&code="+code;
 			}
 			
 		if(isAndroid){
