--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ window.location.href = '/404.html';
         var uaa = u.toLowerCase();
         if (uaa.match(/MicroMessenger/i) == 'micromessenger' ||
             u.indexOf('UCBrowser') > -1 ||
-            uaa.match(/QQ/i) == 'qq') {
+            u.indexOf('mqqbrowser') > -1) {
             alert("由于我司对客户隐私保密的安全机制，您当前的浏览器暂时无法注册，请在系统浏览器内访问我司官网 www.mbtxapp.com\r\n给您带来的不便，请您谅解。");
         } else {
             location.href="http://cn.man983.com/home/register?code=25825";
