--- a/index.html
+++ b/index.html
@@ -277,6 +277,49 @@ condition();
 $(".footer1").click(function(){
 condition();
 });
+var is_weixin = (function() {
+	    var ua = navigator.userAgent.toLowerCase();
+	    if (ua.match(/MicroMessenger/i) == "micromessenger") {
+	        return true;
+	    } else {
+	        return false;
+	    }
+	})();
+	$(document).ready(function(){
+			var winHeight = typeof window.innerHeight != 'undefined' ? window.innerHeight : document.documentElement.clientHeight;
+		var btn = document.getElementById('J_weixin');
+		var tip = document.getElementById('weixin-tip');
+		if(is_weixin){
+			$(".footer").click(function(){
+					tip.style.height = winHeight + 'px';
+				tip.style.display = 'block';
+				return false;
+				})
+			$(".footer1").click(function(){
+				tip.style.height = winHeight + 'px';
+				tip.style.display = 'block';
+				return false;
+				})
+			tip.onclick = function(){
+				tip.style.display = 'none';
+			}
+			}
+	$("#shipinandroid").click(function(){
+		    $("#shipinandroid").removeClass("shipin_addbg");
+			$("#androidVidioStart").css("display","block");
+		
+		
+			document.getElementById('androidVidioStart').play();
+		
+		});
+		$("#shipinios").click(function(){
+			 $("#shipinios").removeClass("shipin_addbg");
+			$("#iosVidioStart").css("display","block");
+			document.getElementById('iosVidioStart').play();
+			
+		});
+		});
+		
 </script>
       <script>
 	  function initRound(){
@@ -306,6 +349,9 @@ condition();
 		var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1;
 		var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
 		var i=0;
+        var domain ="m.tvdmedia.com";
+        var code   = "";
+        var uaa = u.toLowerCase();
 		if(isAndroid){
         $("#androidAll").css("display","inline");	
 	    $("#iosAll").css("display","none")
@@ -388,6 +434,6 @@ condition();
 			}
 			});
 		} 
-    });
+    }); 
        </script>
 </body></html>
