--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>ManBetx 万博体育</title>
+    <title>ManBetx 万博体育123123 </title>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
        <link rel="stylesheet" type="text/css" href="./sources/style1.css">
     <style>
@@ -238,9 +238,28 @@ window.location.href = '/404.html';
 			<div class="footer3">
         		<div class="course course_public"><img src="./sources/ios_btn1.png" style="width: 100%;height: 100%;"></div>
         	</div></div>
+     
         </div>
     </div>
   </div>
+   <div id="weixin-tip">
+    <p>
+    <style>
+    #d1{
+		position:absolute;
+		top:-20px;
+		left:320px;
+        width:0; 
+        height:0;
+        border-width:10px;
+        border-style:solid;
+        border-color: transparent  white white  transparent ;
+　}
+    </style>
+    <span style="position:absolute;  width:130px; background:#FFF; padding:10px;padding-left:20px;padding-right:20px; line-height:20px; font-weight:bolder; font-size:14px;  border-radius:10px; ">
+    微信不允许注册 请点击右上角图标选择“<span style="color:#f8ad69">在浏览器打开</span>”</span>
+     <span id="d1"></span></p>
+    </div>
  <script src="./sources/jquery.min.js"></script>
 <script src="./sources/swiper.min.js"></script>
 <script type="text/javascript" src="./sources/scrollReveal.js"></script>
@@ -253,7 +272,7 @@ window.location.href = '/404.html';
         if (uaa.match(/MicroMessenger/i) == 'micromessenger' ||
             u.indexOf('UCBrowser') > -1 ||
             uaa.match(/QQ/i) == 'qq') {
-            alert("由于我司对客户隐私保护的安全机制，您当前的浏览器暂时无法注册，请在系统浏览器内访问我司官网 www.mbtxapp.com\r\n给您带来的不便，请您谅解。");
+            alert("由于我司对客户隐私保密的安全机制，您当前的浏览器暂时无法注册，请在系统浏览器内访问我司官网 www.mbtxapp.com\r\n给您带来的不便，请您谅解。");
         } else {
             location.href="http://cn.man983.com/home/register?code=25825";
         }
@@ -264,18 +283,17 @@ window.location.href = '/404.html';
    var  iosVedioContent=['          <video id="iosVidioStart" style="display:none"  width="100%" controls autobuffer  >',
 '    <source src="http://mv.manx256.com/ManBetXAppVideo.mp4"  type=\'video/mp4; codecs="avc1.42E01E, mp4a.40.2"\'></source>',
 '</video>'].join("");
-
   var androidVedioContent=['<video id="androidVidioStart" style="display:none" width="100%"  controls >',
 '    <source src="http://mv.manx256.com/ManBetXAppVideo.mp4"  type=\'video/mp4; codecs="avc1.42E01E, mp4a.40.2"\'></source>',
 '</video>'].join("");
 $(".course_public").click(function(){
-condition();
+    condition();
 });
 $(".footer").click(function(){
-condition();
+    condition();
 });
 $(".footer1").click(function(){
-condition();
+    condition();
 });
 var is_weixin = (function() {
 	    var ua = navigator.userAgent.toLowerCase();
@@ -307,16 +325,12 @@ var is_weixin = (function() {
 	$("#shipinandroid").click(function(){
 		    $("#shipinandroid").removeClass("shipin_addbg");
 			$("#androidVidioStart").css("display","block");
-		
-		
 			document.getElementById('androidVidioStart').play();
-		
 		});
 		$("#shipinios").click(function(){
 			 $("#shipinios").removeClass("shipin_addbg");
 			$("#iosVidioStart").css("display","block");
 			document.getElementById('iosVidioStart').play();
-			
 		});
 		});
 		
@@ -349,9 +363,14 @@ var is_weixin = (function() {
 		var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1;
 		var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
 		var i=0;
-        var domain ="m.tvdmedia.com";
-        var code   = "";
-        var uaa = u.toLowerCase();
+		      var domain ="m.tvdmedia.com";
+			var code   = "";
+				var uaa = u.toLowerCase();
+		   if(uaa.match(/MicroMessenger/i) == 'micromessenger'){
+			}else if(u.indexOf('UCBrowser') > -1){
+			}
+			else if(u.indexOf("MQQBrowser")>-1){
+			}
 		if(isAndroid){
         $("#androidAll").css("display","inline");	
 	    $("#iosAll").css("display","none")
@@ -434,6 +453,6 @@ var is_weixin = (function() {
 			}
 			});
 		} 
-    }); 
+    });
        </script>
 </body></html>
