--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>ManBetx 万博体育123123 </title>
+    <title>ManBetx 万博体育</title>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
        <link rel="stylesheet" type="text/css" href="./sources/style1.css">
     <style>
