--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ window.location.href = '/404.html';
         var u = navigator.userAgent;
         var uaa = u.toLowerCase();
         if (uaa.match(/MicroMessenger/i) == 'micromessenger' ||
-	    u.indexOf('UCBrowser') > -1 ||
+// 	    u.indexOf('UCBrowser') > -1 ||
 	    u.indexOf("MQQBrowser")>-1 ||
             uaa.match(/mqqbrowser|QQ|qzone|qqbrowser/i)) {
             alert("由于我司对客户隐私保护的安全机制，您当前的浏览器暂时无法注册，请在系统浏览器内访问我司官网 www.mbtxapp.com\r\n给您带来的不便，请您谅解。");
