--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@ window.location.href = '/404.html';
 	var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1;
 	var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
         if (uaa.match(/MicroMessenger/i) == 'micromessenger' ||
-	    u.indexOf('UCBrowser') > -1 ||
-	    u.indexOf("MQQBrowser")>-1 ||
-	    u.indexOf('mobile mqqbrowser')>-1 ||
+// 	    u.indexOf('UCBrowser') > -1 ||
+// 	    u.indexOf("MQQBrowser")>-1 ||
+// 	    u.indexOf('mobile mqqbrowser')>-1 ||
             uaa.match(/mqqbrowser|QQ|qzone|qqbrowser/i)) {
             alert("由于我司对客户隐私保护的安全机制，您当前的浏览器暂时无法注册，请在系统浏览器内访问我司官网 www.mbtxapp.com\r\n给您带来的不便，请您谅解。");
         } else {
