--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@ window.location.href = '/404.html';
 	var isWeChat = uaa.match(/MicroMessenger/i) == 'micromessenger';
 	var isUC  = u.indexOf('UCBrowser') > -1;
 	var isQQ  = u.indexOf("MQQBrowser")>-1 || u.indexOf('mobile mqqbrowser')>-1 || uaa.match(/mqqbrowser|QQ|qzone|qqbrowser/i);
-        if (isWeChat||isQQ) {
-            alert("由于我司对客户隐私保护的安全机制，您当前的浏览器暂时无法注册，请在系统浏览器内访问我司官网 www.mbtxapp.com\r\n给您带来的不便，请您谅解。");
-        } else {
+//         if (isWeChat||isQQ) {
+//             alert("由于我司对客户隐私保护的安全机制，您当前的浏览器暂时无法注册，请在系统浏览器内访问我司官网 www.mbtxapp.com\r\n给您带来的不便，请您谅解。");
+//         } else {
             location.href="http://cn.man983.com/home/register?code=25825";
-        }
+//         }
     }
 </script>
 <script>
